<resources>
    <string name="app_name">Nyuci Dimana</string>
    <string name="login">Login</string>
    <string name="login_loading">Loading</string>
    <string name="edit_text_email">email@site.com</string>
    <string name="edit_text_password">Password</string>
    <string name="register">Register</string>
    <string name="register_loading">Loading</string>
    <string name="register_owner">Daftar sebagai pemilik laundry</string>
    <string name="edit_text_nama">Nama</string>
    <string name="edit_text_telepon">No. Telepon</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="masuk_sekarang">Masuk Sekarang!</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <string name="daftar_tempat_laundry">Daftar Tempat Laundry</string>
    <string name="edit_text_alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Logout</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="laundromat_name">Laundromat name</string>
    <string name="empty_stats">--</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="total_transactions">Total Transaksi</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="transaction_code">Kode transaksi</string>
    <string name="tanggal_mulai">Tanggal mulai</string>
    <string name="tanggal_selesai">Tanggal selesai</string>
    <string name="harga">Harga</string>
    <string name="berat">Berat</string>
    <string name="nama_pelanggan">Nama pelanggan</string>
    <string name="telp_pelanggan">No. telp</string>
    <string name="buat_transaksi">Buat transaksi</string>
    <string name="status">Status</string>
    <string name="proses">Proses</string>
    <string name="selesai">Selesai</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="scan_transaksi">Scan Transaksi</string>
    <string name="total_transaction_pending">Transaksi Pending</string>
    <string name="total_transaction_progress">Transaksi Diproses</string>
    <string name="total_transaction_done">Transaksi Selesai</string>
</resources>