<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterLaundromatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="32dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/daftar_tempat_laundry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textFontWeight="700"
            android:textSize="36sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/laundromat_name"
            android:hint="@string/edit_text_nama"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="text"
            android:textColorHighlight="@color/colorPrimary"/>

        <EditText
            android:id="@+id/laundromat_address"
            android:hint="@string/edit_text_alamat"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/colorPrimary"/>

        <Button
            android:id="@+id/laundromat_pick_location"
            android:background="@drawable/button_success"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/pilih_lokasi"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/laundromat_register_button"
            android:background="@drawable/button_primary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:layout_width="128dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:stateListAnimator="@null"/>

    </LinearLayout>

</RelativeLayout>