<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="32dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textFontWeight="700"
            android:textSize="36sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/login_email"
            android:hint="@string/edit_text_email"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/colorPrimary"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/edit_text_password"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHighlight="@color/colorPrimary"/>

        <Button
            android:id="@+id/login_button"
            android:background="@drawable/button_primary"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:layout_width="128dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:stateListAnimator="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="128dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_memiliki_akun"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/to_register_button"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_sekarang"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
    </LinearLayout>


</RelativeLayout>