<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/transaction_code"
        android:text="@string/transaction_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/transaction_start_date"
        android:text="@string/tanggal_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/transaction_price"
        android:text="@string/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/transaction_weight"
        android:text="@string/berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp"/>

</LinearLayout>