<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerHomeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_laundromat_name"
        android:text="@string/laundromat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textFontWeight="700"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/list_background"
                android:padding="16dp">

                <TextView
                    android:text="@string/pendapatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/home_revenue"
                    android:text="@string/empty_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="700"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/list_background"
                android:padding="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:text="@string/total_transactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/home_total_transactions"
                    android:text="@string/empty_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="700"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/list_background"
                android:padding="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:text="@string/total_transaction_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/home_total_transaction_pending"
                    android:text="@string/empty_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="700"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/list_background"
                android:padding="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:text="@string/total_transaction_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/home_total_transaction_progress"
                    android:text="@string/empty_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="700"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/list_background"
                android:padding="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:text="@string/total_transaction_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/home_total_transaction_done"
                    android:text="@string/empty_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="700"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>